# connect-four-cli

./: CMakeLists.txt  README.md  connect_four.c  game.c  game.h  negamax.c  negamax.h
connect_four/: CMakeLists.txt
connect_four/src/connect_four/: game.c
